--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "css-loader": "^0.26.1",
-    "style-loader": "^0.13.1",
-    "vue-loader": "^10.0.2",
-    "vue-template-loader": "^0.2.1",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-latest": "^6.24.0",
+    "babel-runtime": "^6.23.0",
+    "css-loader": "^0.27.3",
+    "vue-loader": "^11.0.0",
+    "vue-template-loader": "^0.2.2",
     "webpack": "^1.14.0"
   }
 }
