--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yoyo-wechat",
+  "name": "frontend",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -23,11 +23,9 @@
     "bootstrap": "^3.3.7",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
-    "fastclick": "^1.0.6",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
-    "jquery-weui": "^1.0.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
     "vue": "^2.3.3",
@@ -37,7 +35,6 @@
     "vue-template-loader": "^0.3.0",
     "vuex": "^2.3.1",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.5.0",
-    "weui": "^1.1.2"
+    "webpack-dev-server": "^2.5.0"
   }
 }
