个人信息页面重构

--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "scripts": {
     "server": "webpack-dev-server --config webpack/development/webpack.server.config.js",
     "development.entry": "webpack --config webpack/development/webpack.entry.config.js",
-    "development.dll": "webpack --config webpack/development/webpack.dll.config.js",
     "development.page": "webpack --config webpack/development/webpack.page.config.js",
-    "development.all": "npm run development.dll && npm run development.page && npm run development.entry",
     "production.entry": "webpack --config webpack/production/webpack.entry.config.js",
-    "production.dll": "webpack --config webpack/production/webpack.dll.config.js",
-    "production.page": "webpack --config webpack/production/webpack.page.config.js",
-    "production.all": "npm run production.dll && npm run production.page && npm run production.entry"
+    "production.page": "webpack --config webpack/production/webpack.page.config.js"
   },
   "dependencies": {
     "babel": "^6.23.0",
