--- a/package.json
+++ b/package.json
@@ -16,24 +16,16 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
-    "bootstrap": "^3.3.7",
     "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "fastclick": "^1.0.6",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
-    "jquery": "^3.2.1",
-    "jquery-weui": "^1.0.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
-    "vue": "^2.3.3",
+    "vue": "^2.4.2",
     "vue-loader": "^12.0.2",
-    "vue-router": "^2.5.3",
     "vue-template-compiler": "^2.3.3",
     "vue-template-loader": "^0.3.0",
-    "vuex": "^2.3.1",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.5.0",
-    "weui": "^1.1.2"
+    "webpack-dev-server": "^2.5.0"
   }
 }
